--- a/.vercel/output/functions/__server.func/package.json
+++ b/.vercel/output/functions/__server.func/package.json
@@ -7,6 +7,8 @@
     "@base-ui/react": "1.0.0",
     "@base-ui/utils": "0.2.3",
     "@floating-ui/utils": "0.2.10",
+    "@hugeicons/core-free-icons": "3.1.1",
+    "@hugeicons/react": "1.1.4",
     "@neondatabase/serverless": "1.0.2",
     "@radix-ui/primitive": "1.1.3",
     "@radix-ui/react-compose-refs": "1.1.2",
@@ -25,7 +27,6 @@
     "@radix-ui/react-use-effect-event": "0.0.2",
     "@radix-ui/react-use-escape-keydown": "1.1.1",
     "@radix-ui/react-use-layout-effect": "1.1.1",
-    "@tabler/icons-react": "3.36.1",
     "@tanstack/devtools-event-client": "0.4.0",
     "@tanstack/form-core": "1.27.7",
     "@tanstack/history": "1.145.7",
