--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hugeicons/react": "^1.1.4",
     "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/history": "^1.145.7",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.27.7",
     "@tanstack/react-form-devtools": "^0.2.11",
